k8s/applications/web/affine/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: affine
  namespace: affine
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: external
      namespace: gateway
  hostnames:
    - "affine.peekoff.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: affine
          port: 3010
