k8s/applications/web/affine/mcp-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: affine-mcp
  namespace: affine
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "affine-mcp.peekoff.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: affine-mcp
          port: 3000
      timeouts:
        request: 0s
        backendRequest: 0s
