k8s/applications/web/affine/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: affine
  namespace: affine
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: affine
  ingress:
    - fromEntities:
        - host
        - remote-node
        - ingress
      toPorts:
        - ports:
            - port: "3010"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: affine-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:cnpg.io/cluster: affine-postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: affine-redis
  namespace: affine
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: affine-redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: affine
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: affine-migration
  namespace: affine
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: affine-migration
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:cnpg.io/cluster: affine-postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: affine-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
